err/delune.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/delune'...
Listing './lib/python3.5/site-packages/delune/analyzers'...
Listing './lib/python3.5/site-packages/delune/analyzers/util'...
Listing './lib/python3.5/site-packages/delune/classifier'...
Listing './lib/python3.5/site-packages/delune/classifier/classifiers'...
Listing './lib/python3.5/site-packages/delune/classifier/segment'...
Listing './lib/python3.5/site-packages/delune/cluster'...
Listing './lib/python3.5/site-packages/delune/export'...
Listing './lib/python3.5/site-packages/delune/export/skitai'...
Listing './lib/python3.5/site-packages/delune/export/skitai/package'...
Listing './lib/python3.5/site-packages/delune/extension'...
Listing './lib/python3.5/site-packages/delune/extension/delune'...
Listing './lib/python3.5/site-packages/delune/extension/delune/analyzer'...
Listing './lib/python3.5/site-packages/delune/extension/delune/index'...
Listing './lib/python3.5/site-packages/delune/extension/delune/win32'...
Listing './lib/python3.5/site-packages/delune/lib'...
Compiling './lib/python3.5/site-packages/delune/lib/diskusage.py'...
***   File "./lib/python3.5/site-packages/delune/lib/diskusage.py", line 34
    du = disk_usage (r"C:\")
                           ^
SyntaxError: EOL while scanning string literal

Listing './lib/python3.5/site-packages/delune/searcher'...
Listing './lib/python3.5/site-packages/delune/searcher/segment'...
Listing './lib/python3.5/site-packages/delune/util'...
Listing './lib/python3.5/site-packages/delune/win32inclib'...
Listing './lib/python3.5/site-packages/delune/win32inclib/pthread2'...
Listing './lib/python3.5/site-packages/delune/win32inclib/pthread2/x64'...
Listing './lib/python3.5/site-packages/delune/win32inclib/pthread2/x86'...
Listing './lib/python3.5/site-packages/delune/win32inclib/zlib'...
Listing './lib/python3.5/site-packages/delune/win32inclib/zlib/x64'...
Listing './lib/python3.5/site-packages/delune/win32inclib/zlib/x86'...
Listing './lib/python3.5/site-packages/delune-0.3.1.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
